--- a/spec.html
+++ b/spec.html
@@ -11834,10 +11834,10 @@
       </emu-clause>
 
       <emu-clause id="sec-primary-expression-regular-expression-literals-static-semantics-isvalidregularexpressionliteral" aoid="IsValidRegularExpressionLiteral">
-        <h1>Static Semantics: IsValidRegularExpressionLiteral ( literal )</h1>
+        <h1>Static Semantics: IsValidRegularExpressionLiteral ( _literal_ )</h1>
         <p>The abstract operation IsValidRegularExpressionLiteral determines if its argument is a valid regular expression literal. The following steps are taken:</p>
         <emu-alg>
-          1. Assert: _literal_ is a Parse Node corresponding to a RegularExpressionLiteral.
+          1. Assert: _literal_ is |RegularExpressionLiteral|.
           1. If FlagText of _literal_ contains any code points other than `"g"`, `"i"`, `"m"`, `"s"`, `"u"`, or `"y"`, or if it contains the same code point more than once, return *false*.
           1. Let _P_ be BodyText of _literal_.
           1. If FlagText of _literal_ contains `"u"`,
